# Insta_Audience_Analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TROUBLESHOOTING.md  docker-compose.yml  ecg.ipynb  pyproject.toml  requirements.txt
app/: classifier.py  ig_api.py  main.py  report.py  schemas.py
data/: sample_bios.csv
scripts/: bootstrap.sh  demo.sh  demo_classify.py  run_api.sh
web/: index.html  script.js  style.css
